created javascript file

--- a/jotkakin.html
+++ b/jotkakin.html
@@ -4,6 +4,7 @@
 		<title>Otsikko</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<meta charset="utf-8">
+		<script src="script.js"></script>
 	</head>
 	<body>
 		<h1><font size="8">terve tuloa mun ekalle sivulle ikinääää!!!! :DDDDDD</font></h1>
@@ -15,6 +16,9 @@
 		<h7><font size="3">kaikuuuuu</font></h7>
 		<h8><font size="2">kaikuuuuu</font></h8>
 		<h9><font size="1">kaikuuuuu</font></h9>
+		<div>
+			<button type="button" onclick="showalert()">mysteerinen nappi :S</button>
+		</div>
 		<div class="sininen-div">
 			<p align="center"><i>hehehe ;P</i></p>
 		</div>
