toggleClass homma ja pari kissakuvaa

--- a/jotkakin.html
+++ b/jotkakin.html
@@ -22,7 +22,7 @@
 		<div class="sininen-div">
 			<p align="center"><i>hehehe ;P</i></p>
 		</div>
-		<div class="vihrea-div">
+		<div id="testielementti" class="vihrea-div">
 			<ul>
 				<li>tää koodi koulu on tosi kiva paikka</li>
 				<li>ihan oikeest</li>
@@ -32,12 +32,17 @@
 			<p align="center">tässä on joku linkki youtubeen -----> <a href="https://www.youtube.com/?gl=FI&hl=fi">youtube</a></p>
 			<img src="kuva2.png" alt="hups kuva ei toimi D:">
 		</div>
-		<div class="margin-tyyli">
+		<div id="testielementti" class="margin-tyyli">
 			<ul>
 				<li>hei kattokaa toinen divi....homma......?</li>
 				<li>jeeeeeeee</li>
 				<li>öööööööhhhhhh</li>
 				<li>hei????????</li>
+		<button type="button" onclick="toggleClass('testielementti', 'vihrea-div')">toinen mysteerinen nappi :O
+		</button>	
+		</div>
+		<div>
+			<img src="kissakuva.jpg">
 		</div>
 	</body>
 </html>
