--- a/jotkakin.html
+++ b/jotkakin.html
@@ -42,7 +42,9 @@
 		</button>	
 		</div>
 		<div>
-			<img src="kissakuva.jpg">
+			<img id="kissakuva" src="kissakuva.jpg">
+			<button onclick="switchImage('kissakuva', 'toinenkissakuva.jpg')"> legendaarinen kisssa nappi :D </button>
+			<button onclick="switchImage('kissakuva', 'kissakuva.jpg')"> takasin isoon kuvaan :) </button>
 		</div>
 	</body>
 </html>
